--- a/template.yaml
+++ b/template.yaml
@@ -42,7 +42,7 @@ Resources:
         Properties:
             CodeUri: slack-unfurling-redash/
             Handler: app.lambdaHandler
-            Runtime: nodejs8.10
+            Runtime: nodejs12.x
             Policies:
                 - S3CrudPolicy:
                     BucketName: !Ref BucketName
