--- a/slack-unfurling-redash/package.json
+++ b/slack-unfurling-redash/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@slack/client": "^5.0.0",
-    "chrome-aws-lambda": "^10.1.0",
+    "@sparticuz/chromium": "^108.0.1",
     "puppeteer-core": "^10.1.0",
     "randomstring": "^1.1.5"
   },
