--- a/slack-unfurling-redash/package.json
+++ b/slack-unfurling-redash/package.json
@@ -7,7 +7,7 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
-    "@slack/client": "^5.0.0",
+    "@slack/web-api": "^6.10.0",
     "@sparticuz/chromium": "^108.0.1",
     "puppeteer-core": "^19.2.2",
     "randomstring": "^1.3.0"
