--- a/slack-unfurling-redash/package.json
+++ b/slack-unfurling-redash/package.json
@@ -14,10 +14,7 @@
     "randomstring": "^1.3.1"
   },
   "scripts": {
-    "test": "mocha tests/unit/"
+    "test": "node --test tests/unit/*.mjs"
   },
-  "devDependencies": {
-    "chai": "^5.2.1",
-    "mocha": "^11.7.1"
-  }
+  "devDependencies": {}
 }
